[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PCam.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Gui/Dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/End.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Overlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://Assets/bg.webp" type="Texture" id=8]
[ext_resource path="res://Resource/theme.tres" type="Theme" id=9]
[ext_resource path="res://Scripts/DeathLabel.gd" type="Script" id=10]
[ext_resource path="res://Scripts/ColorRect.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Gui/CenterButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Portal.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Gui/Pause.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Gui/Settings.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, -2.79397e-07 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Label")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "end"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start"
} ]
}

[node name="Main" type="Node2D"]
pause_mode = 1
script = ExtResource( 7 )
pause_menu = NodePath("CanvasLayer/Pause")

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Node2D"]
light_mask = 5
position = Vector2( 115, -186 )
texture = ExtResource( 8 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
light_mask = 1
occluder_light_mask = 1
tile_data = PoolIntArray(  )

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 2 )]
light_mask = 4
position = Vector2( -185, 8 )
portal = NodePath("../Portal")

[node name="Portal" parent="." instance=ExtResource( 14 )]

[node name="End" parent="." instance=ExtResource( 5 )]

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Overlay" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false
margin_right = 90.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dialogue" parent="CanvasLayer/CenterContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
text = "Deaths"
align = 1
valign = 1
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
anims/Die = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/end = SubResource( 2 )

[node name="Tween" type="Tween" parent="CanvasLayer/ColorRect"]

[node name="Label2" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 293.0
margin_top = 817.0
margin_right = 468.0
margin_bottom = 878.0
theme = ExtResource( 9 )
text = "Deaths: "

[node name="Label3" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 469.0
margin_top = 817.0
margin_right = 644.0
margin_bottom = 878.0
theme = ExtResource( 9 )
text = "0 "

[node name="Label4" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 699.0
margin_top = 817.0
margin_right = 874.0
margin_bottom = 878.0
theme = ExtResource( 9 )
text = "Time: "

[node name="Label5" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 823.0
margin_top = 817.0
margin_right = 998.0
margin_bottom = 878.0
theme = ExtResource( 9 )
text = "00s"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -345.5
margin_top = -237.0
margin_right = 345.5
margin_bottom = -115.0

[node name="Home" parent="CanvasLayer/ColorRect/HBoxContainer" instance=ExtResource( 12 )]
margin_right = 227.0
margin_bottom = 122.0
_name = "Home"
connect = NodePath("../..")

[node name="Restart" parent="CanvasLayer/ColorRect/HBoxContainer" instance=ExtResource( 12 )]
margin_left = 231.0
margin_right = 459.0
margin_bottom = 122.0
_name = "Restart"
connect = NodePath("../..")

[node name="Next" parent="CanvasLayer/ColorRect/HBoxContainer" instance=ExtResource( 12 )]
margin_left = 463.0
margin_right = 691.0
margin_bottom = 122.0
_name = "Next"
connect = NodePath("../..")

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 15 )]
visible = false
settings = NodePath("../Settings")

[node name="Settings" parent="CanvasLayer" instance=ExtResource( 16 )]
visible = false

[connection signal="tree_exiting" from="Player" to="Player" method="_on_Player_tree_exiting"]
[connection signal="animation_finished" from="CanvasLayer/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
